# NitroCppTest

./: .gitignore  README  README.md
NitroCppTest-ConorMeehan/: CMakeLists.txt  NitroCppTest.cpp  rectangles1.json
NitroCppTest-ConorMeehan/include/: IntersectionTester.hpp  Point.hpp  Rectangle.hpp  RectangleIntersector.hpp  Utility.hpp
NitroCppTest-ConorMeehan/src/: IntersectionTester.cpp  Point.cpp  Rectangle.cpp  RectangleIntersector.cpp  Utility.cpp
NitroCppTest-ConorMeehan/test/: IntersectionTesterTest.cpp  PointTest.cpp  RectangleIntersectorTest.cpp  RectangleTest.cpp  UtilityTest.cpp
